# cookiecutter-stoeltje

./: .gitignore  README.md  cookiecutter.json  pyproject.toml
hooks/: post_gen_project.py  pre_gen_project.py
{{cookiecutter.project_slug}}/: .flake8  .pre-commit-config.yaml  pyproject.toml
