[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
# Use identifier from https://spdx.org/licenses/
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
documentation = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/issues"

[tool.poetry.dependencies]
python = "~3.10.0"

[tool.poetry.dev-dependencies]
pytest = "^6.0.1"
pytest-cov = "^2.10.1"
pytest-xdist = "^2.1.0"
black = { version = "^20.8b1", allow-prereleases = true }
bandit = "^1.6.2"
pylint = "^2.6.0"
bump2version = "^1.0.1"
vulture = "^2.3"
jedi-language-server = "^0.22.0"
reorder-python-imports = "^2.3.6"

#[tool.pytest.ini_options]
## Example
#filterwarnings = [
#    "ignore::DeprecationWarning:moto.*:",
#    "ignore::DeprecationWarning:boto.*:",
#]

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
