[tool.poetry]
name = "{{ cookiecutter.project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.short_description }}"
authors = ["{{ cookiecutter.full_name }} <{{ cookiecutter.email }}>"]
# Use identifier from https://spdx.org/licenses/
license = "{{ cookiecutter.license }}"
readme = "README.md"
homepage = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
repository = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}"
documentation = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
]

[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/{{ cookiecutter.github_name }}/{{ cookiecutter.project_slug }}/issues"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
pytest-xdist = "^2.5.0"
black = "^22.3.0"
pylint = "^2.6.0"
bandit = "^1.7.4"
vulture = "^2.4"
pre-commit = "^2.19.0"
taskipy = "^1.10.2"

#[tool.pytest.ini_options]
## Example
#filterwarnings = [
#    "ignore::DeprecationWarning:moto.*:",
#    "ignore::DeprecationWarning:boto.*:",
#]

[tool.taskipy.tasks]
test = "pytest --cov={{ cookiecutter.project_slug }} --cov-report html --cov-report xml"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 120

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
